--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 ## Basic Configuration
 ## -----------------------------------------------
 
-title = "Hugo Story"
+title = "Imhotep Ben-Elliott Hogan"
 theme = "hugo-story"
 
 
