--- a/data/banner.yml
+++ b/data/banner.yml
@@ -1,12 +1,13 @@
 ####################### Banner #########################
 style: "style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right"
-title : "Hugo Story"
+title : "Imhotep Ben-Elliott Hogan"
 subtitle: |
-  Hugo Story released for free under the <a target="_blank" href="https://creativecommons.org/licenses/by/3.0/">Creative Commons</a>.
+  Class of 2022 mathematics major at <a target="_blank" href="https://famu.edu/">Florida A&ampM University</a>.
 content : |
-  This is a <strong>Banner</strong> element, and it's generally used as an introduction or opening statement. You can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-banner">details</a>).
+  Hello! I'm Imhotep, a <a target ="_blank"> href ="https://www.msri.org/msri_ups/967/schedules/30242">researcher in algebraic combinatorics</a> and general lover of mathematics, gardening, and cooking vegetarian dishes! I plan on completing a PhD  in mathematics, starting in Fall 2022. Updates coming soon!
 button:
-  label : "Get Started"
-  link : "#first"
-image : "images/banner.jpg"
+  label : "Email me"
+  link : "mailto:imhotep1.hogan@famu.edu"
+image : "images/ImhotepBHogan.png"
 
+# <strong>Banner</strong> element, and it's generally used as an introduction or opening statement. You can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-banner">details</a>).
