--- a/data/banner.yml
+++ b/data/banner.yml
@@ -4,7 +4,7 @@ title : "Imhotep Ben-Elliott Hogan"
 subtitle: |
   Class of 2022 mathematics major at <a target="_blank" href="https://famu.edu/">Florida A&ampM University</a>.
 content : |
-  Hello! I'm Imhotep, a <a target ="_blank"> href ="https://www.msri.org/msri_ups/967/schedules/30242">researcher in algebraic combinatorics</a> and general lover of mathematics, gardening, and cooking vegetarian dishes! I plan on completing a PhD  in mathematics, starting in Fall 2022. Updates coming soon!
+  Hello! I'm Imhotep, a <a target ="_blank" href ="https://www.msri.org/msri_ups/967/schedules/30242">researcher in algebraic combinatorics</a> and general lover of mathematics, gardening, and cooking vegetarian dishes! I plan on completing a PhD  in mathematics, starting in Fall 2022. Updates coming soon!
 button:
   label : "Email me"
   link : "mailto:imhotep1.hogan@famu.edu"
