--- a/data/banner.yml
+++ b/data/banner.yml
@@ -8,6 +8,6 @@ content : |
 button:
   label : "Email me"
   link : "mailto:imhotep1.hogan@famu.edu"
-image : "images/pic.jpg"
+image : "images/ibh.jpg"
 
 # <strong>Banner</strong> element, and it's generally used as an introduction or opening statement. You can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-banner">details</a>).
