--- a/data/banner.yml
+++ b/data/banner.yml
@@ -2,7 +2,7 @@
 style: "style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right"
 title : "Imhotep Ben-Elliott Hogan"
 subtitle: |
-  Class of 2022 mathematics major at \\ <a target="_blank" href="https://famu.edu/">Florida A&ampM University</a>.
+  Class of 2022 mathematics major at <a target="_blank" href="https://famu.edu/">Florida A&ampM University</a>.
 content : |
   Hello! I'm Imhotep B. Hogan, a <a target ="_blank" href ="https://www.msri.org/msri_ups/967/schedules/30242">researcher in algebraic combinatorics</a> and general lover of mathematics, gardening, and cooking vegetarian dishes! I plan on completing a PhD in mathematics, beginning a graduate program in Fall 2022. Check back for updates!
 button:
